@@ -1,8 +1,8 @@
 {
-  "timestamp" : "2022-11-22T16:31:16Z",
+  "timestamp" : "2022-11-23T01:46:48Z",
   "count_outdated" : 629,
   "uniques_outdated" : 397,
-  "count" : 648,
+  "count" : 649,
   "uniques" : 409,
   "clones" : [
     {
@@ -70,8 +70,8 @@
     },
     {
       "timestamp": "2022-11-22T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
+      "count": 2,
+      "count_minmax": [ 1, 2 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ]
     }
