@@ -1,3 +1,11 @@
+2022-11-23T01:46:48Z:
+* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/3528553241 # 638
+* notice: last 14d: unq all: 3 20
+* notice: prev accum: outdated-unq outdated-all / unq all: 397 629 / 409 648
+* notice: next accum: outdated-unq outdated-all / unq all: 397 629 / 409 649
+* notice: prev exec diff / last date diff / accum: unq all: +0 +1 -0 -0 / +1 +2 -0 -0 / 1 2
+* notice: removed / changed dates: [] / [2022-11-22]
+
 2022-11-22T16:31:16Z:
 * notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/3525261792 # 637
 * notice: last 14d: unq all: 3 19
